--- a/src/views/posts/show.ejs
+++ b/src/views/posts/show.ejs
@@ -11,7 +11,7 @@
                 <% include ../static/partials/messages.ejs %>
 
             <h1><%= post.title %></h1>
-            <% if(currentUser && (currentUser.isOwner() || currentUser.isAdmin())) { %>
+            <% if(currentUser != null && (currentUser.isOwner(post) || currentUser.isAdmin())) { %>
                 <a href="/topics/<%= post.topicId %>/posts/<%= post.id %>/edit" class="btn btn-warning">Edit Post</a>
                 <form style="display:initial" action="/topics/<%= post.topicId %>/posts/<%= post.id %>/destroy" method="POST">
                     <button type="submit" class="btn btn-danger">Delete</button>
