--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -31,6 +31,23 @@
         <% } %>
       </ul>
       <hr>
+      <hr>
+      <h2> Favorite Posts </h2>
+
+      <ul class="list-unstyled"></ul>
+      
+      <% if (favorites) { %>
+        <% favorites.forEach(favorite => { %>
+          <li>
+            <a href="/topics/<%= favorite.Post.topicId %>/posts/<%= favorite.Post.id %>">
+              <%= favorite.Post.title %>
+            </a>
+          </li>
+          <% }) %>
+        <% } %>
+      </ul>
+      
+      <hr>
 
       <h2> Latest Comments</h2>
 
